<resources>
    <string name="app_name">Thingies</string>
    <string name="meal_plan_headline">How much can you spend daily</string>
    <string name="meal_plan_enter_res">Res dollars left…</string>
    <string name="meal_plan_enter_flex">Flex dollars left…</string>
    <string name="meal_plan_balance_link">
        Wanna check the balance?
        <a href="https://ubccard.ubc.ca/">Here you go</a>
    </string>
    <string name="meal_plan_calc_button">CALC</string>
    <string name="meal_plan_calc_ResFlexDollars_DefaultValue">0</string>
    <string name="meal_plan_calc_MoveOutDate_DefaultDate">April 30, 2021</string>
    <string name="meal_plan_calc_MoveOutDate_DefaultText">Moving out on: </string>
    <string name="meal_plan_calc_MoveOutDate_ChangeButtonText">Change Date</string>
</resources>