<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealPlanCalculations">

    <EditText
        android:id="@+id/editTextNumber_resDol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/meal_plan_calc_ResFlexDollars_DefaultValue"
        android:ems="10"
        android:hint="@string/meal_plan_enter_res"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextNumber_flexDol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/meal_plan_calc_ResFlexDollars_DefaultValue"
        android:ems="10"
        android:hint="@string/meal_plan_enter_flex"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_resDol" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/meal_plan_headline"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_getMealCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClick_CalcMealPlan"
        android:text="@string/meal_plan_calc_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumber_flexDol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber_flexDol" />

    <TextView
        android:id="@+id/textView_MealPlan_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/meal_plan_calc_ResFlexDollars_DefaultValue"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mealPlan_link" />

    <TextView
        android:id="@+id/textView_mealPlan_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/meal_plan_balance_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber_flexDol" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/meal_plan_calc_MoveOutDate_DefaultText"
        app:layout_constraintBaseline_toBaselineOf="@+id/change_date_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/move_out_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/meal_plan_calc_MoveOutDate_DefaultDate"
        android:textColor="#FFEB3B"
        app:layout_constraintBaseline_toBaselineOf="@+id/change_date_button"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/change_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/meal_plan_calc_MoveOutDate_ChangeButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/move_out_date_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>